--- a/src/components/common/Header/Burger/burger.module.scss
+++ b/src/components/common/Header/Burger/burger.module.scss
@@ -15,7 +15,8 @@
   align-items: center;
   position: relative;
   width: 20px;
-  height: 7px;
+  height: 2px;
+  background-color: $color-main-black;
 
   &::after {
     content: "";
@@ -23,7 +24,7 @@
     position: absolute;
     width: 100%;
     height: 2px;
-    top: 0;
+    top: -7px;
     left: 0;
     // transform: translate(0, 4px);
     transition: $transiton;
@@ -34,7 +35,7 @@
     position: absolute;
     width: 100%;
     height: 2px;
-    bottom: 0;
+    bottom: -7px;
     left: 0;
     transition: $transiton;
   }
@@ -50,10 +51,10 @@
   left: 0;
   padding: 48px 48px 24px 24px;
   border-radius: 0 10px 10px 0;
-  &_menu{
+  &_menu {
     position: relative;
   }
-  &_close_btn{
+  &_close_btn {
     position: absolute;
     top: 15px;
     right: 15px;
@@ -82,11 +83,14 @@
 }
 .ctn_burger[active-target="true"] {
   & .burger {
+    background-color: transparent;
     &::after {
-      transform: rotate(45deg) translate(2px, 3px);
+      transform: rotate(45deg) ;
+      top: 0;
     }
     &::before {
-      transform: rotate(-45deg) translate(1px, -2px);
+      transform: rotate(-45deg) ;
+      bottom: 0;
     }
   }
 }
@@ -105,11 +109,11 @@
   }
 }
 @media screen and (max-width: $media-phone) {
-  .block{
+  .block {
     // padding: 0;
     right: 0;
   }
-    .ctn_burger span{
-        display: none;
-    }
+  .ctn_burger span {
+    display: none;
+  }
 }
