--- a/src/components/common/Header/header.module.scss
+++ b/src/components/common/Header/header.module.scss
@@ -1,5 +1,3 @@
-@import "/src/asset/common-styles/";
-
 .header {
   position: sticky;
   top: 0;
@@ -13,7 +11,7 @@
 }
 
 .logo {
-  &_small{
+  &_small {
     display: none;
   }
 }
@@ -30,7 +28,20 @@
     }
   }
 }
-@media screen and (max-width: $media-tablet) {
+.test {
+  color: black;
+  display: flex;
+  gap: 10px;
+  &_title {
+    font-size: 20px;
+  }
+  &_link {
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
+@include mediaTablet {
   .nav_block {
     display: none;
   }
@@ -39,12 +50,12 @@
     display: none;
   }
 }
-@media screen and (max-width: $media-mini-phone) {
+@include mediaMiniPhone {
   .logo {
-    &_small{
+    &_small {
       display: block;
     }
-    &_big{
+    &_big {
       display: none;
     }
   }
