--- a/src/components/common/Popup/PopupMap/popupMap.module.scss
+++ b/src/components/common/Popup/PopupMap/popupMap.module.scss
@@ -1,5 +1,3 @@
-@import "/src/asset/common-styles/";
-
 .popup {
   &_map {
   }
@@ -17,13 +15,48 @@
 .active {
   left: 0;
 }
-
+.image_ctn {
+  display: flex;
+  position: relative;
+  &_image {
+    height: 100%;
+    width: 100%;
+    border-radius: $border-radius-10;
+  }
+}
 .button {
+  &_ctn {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(49, 45, 130, 0.19);
+    border-radius: $border-radius-10;
+  }
+
   &_icon {
     font-size: 20px;
     transition: $transiton;
   }
   &:hover &_icon {
     color: $color-main-gold;
+  }
+}
+@include mediaTablet {
+  .image_ctn {
+    // position: relative;
+    &_image {
+      display: none;
+    }
+  }
+  .button {
+    &_ctn {
+      background-color: transparent;
+      position: relative;
+    }
   }
 }
