--- a/src/screens/ObjectScreen/objectScreen.module.scss
+++ b/src/screens/ObjectScreen/objectScreen.module.scss
@@ -43,9 +43,20 @@
     gap: $gap-small;
     &_titleCtn {
       display: flex;
-      align-items: center;
+      // align-items: center;
       gap: $gap-medium;
     }
+    &_rate {
+      // padding: 10px;
+      width: fit-content;
+      // background-color: $color-additional-background;
+      border-radius: $border-radius-20;
+      &_icon {
+        margin-bottom: 2px;
+        font-size: 16px;
+      }
+    }
+
     & h3 {
       text-wrap: nowrap;
     }
@@ -83,15 +94,9 @@
       @extend %Text18;
       text-wrap: nowrap;
       position: relative;
-      padding-bottom: 5px;
-      &::before {
-        content: "";
-        height: 2px;
-        position: absolute;
-        top: calc(100% + 2px);
-        left: 0;
-        width: 100%;
-        background-color: $color-main-black;
+      transition: $transiton;
+      &:hover{
+        color: $color-main-gold;
       }
     }
   }
@@ -118,7 +123,7 @@
   }
   .info_column:nth-child(3) {
     display: grid;
-   
+
     gap: 32px;
   }
 
@@ -200,10 +205,12 @@
     }
   }
   .info_map {
+    height: 100%;
     &_image {
       width: 100%;
       height: 100%;
       border-radius: $border-radius-20;
+      object-fit: cover;
     }
   }
   .button_estimate {
