--- a/src/components/common/Cards/CardSliderLocation/cardSliderLocation.module.scss
+++ b/src/components/common/Cards/CardSliderLocation/cardSliderLocation.module.scss
@@ -4,6 +4,7 @@
   grid-template-rows: 220px 1fr;
   gap: 16px;
   &_image {
+    height: 220px;
     border-radius: 12px;
     overflow: hidden;
     position: relative;
@@ -11,6 +12,8 @@
       // height: 320px;
       // width: auto;
       // min-width: 100%;
+      width: 100%;
+      height: 100%;
       object-fit: cover;
     }
     &_type {
