--- a/src/components/common/Cards/CardList/cardList.module.scss
+++ b/src/components/common/Cards/CardList/cardList.module.scss
@@ -55,11 +55,10 @@
       cursor: pointer;
       &_icon {
         font-size: 18px;
-       
       }
-       &:active &_icon{
-          transform: scale(1.3);
-        }
+      &:active &_icon {
+        transform: scale(1.3);
+      }
       &:hover {
         background-color: $color-main-blue_hover;
       }
@@ -112,7 +111,29 @@
     overflow: hidden;
   }
 }
-
+.description {
+  &_subtitle {
+    display: flex;
+    gap: 10px;
+    // align-items: center;
+    @extend %Text14;
+    color: $color-main-grey;
+    // margin-top: -10px;
+  }
+}
+.rateHotel {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+  // font-size: 10px;
+  &_icon {
+    color: $color-main-gold;
+    font-size: 16px;
+  }
+}
+.rateCafe {
+  font-size: 14px;
+}
 @media screen and (max-width: $media-phone) {
   .card {
     grid-template-columns: 1fr;
