--- a/src/components/common/Gallery/gallery.module.scss
+++ b/src/components/common/Gallery/gallery.module.scss
@@ -27,6 +27,7 @@
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 232px 232px;
   gap: $gap-small;
+  position: relative;
 }
 .image__main,
 .image__additional {
@@ -63,7 +64,7 @@
     position: relative;
     transition: $transiton;
     cursor: pointer;
-    &:hover{
+    &:hover {
       transform: scale(1.02);
       box-shadow: $box-shadow-default;
     }
@@ -74,10 +75,25 @@
     object-fit: cover;
   }
 }
-
+.button_watchAll {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 20px;
+}
 @include mediaTablet {
   .image__additional {
     grid-column: 3/5;
+  }
+  .skeleton {
+    grid-template-columns: repeat(2, 1fr);
+    &_slide:first-child {
+      grid-area: 1 / 1 / 3 / 2;
+    }
+    &_slide:nth-child(4),
+    &_slide:nth-child(5) {
+      display: none;
+    }
   }
 }
 @include mediaPhone {
@@ -90,6 +106,18 @@
     height: 264px;
     & img {
       transform: scale(1);
+    }
+  }
+  .skeleton {
+    height: 264px;
+    grid-template-columns:1fr 100px;
+    grid-template-rows:1fr;
+    &_slide:first-child {
+      grid-area: 1 / 1 / 2 / 2;
+    }
+    
+    &_slide:nth-child(3) {
+      display: none;
     }
   }
 }
