--- a/src/components/common/Switcher/Switcher.module.scss
+++ b/src/components/common/Switcher/Switcher.module.scss
@@ -1,12 +1,11 @@
 .switcher {
   display: flex;
+  justify-content: center;
   gap: 5px;
 
   color: $color-main-grey-light;
   @extend %Text14;
   &_item {
     padding: 10px;
-
- 
   }
 }
