--- a/src/screens/NewsAuthorScreen/newsAuthorScreen.module.scss
+++ b/src/screens/NewsAuthorScreen/newsAuthorScreen.module.scss
@@ -1,5 +1,23 @@
 .breadcrumb {
 }
+.author {
+  display: flex;
+  gap: $gap-big;
+  background-color: $color-additional-background;
+  padding: 10px;
+  border-radius: $border-radius-20;
+  margin-bottom: 20px;
+  &_image {
+    border-radius: $border-radius-20;
+    object-fit: cover;
+  }
+  &_description {
+    display: flex;
+    flex-direction: column;
+    &_text {
+    }
+  }
+}
 .title {
   margin-bottom: 10px;
 }
@@ -51,6 +69,12 @@
   .popular_desktop {
     display: none;
   }
+ 
 }
 @include mediaPhone {
+    
+    .author {
+        flex-direction: column;
+        align-items: center;
+      }
 }
