--- a/src/components/common/BlockFunctional/blockFunctional.module.scss
+++ b/src/components/common/BlockFunctional/blockFunctional.module.scss
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: column;
   gap: $gap-big;
-  background-color: $color-additional-background;
+  background-color: $color-main-background;
   border-radius: $border-radius-10;
   padding: 30px;
   &_title {
