--- a/src/screens/NewsAuthorScreen/newsAuthorScreen.module.scss
+++ b/src/screens/NewsAuthorScreen/newsAuthorScreen.module.scss
@@ -33,7 +33,7 @@
     grid-column: 2/3;
     position: sticky;
     top: 74px;
-    height: fit-content;
+    height: calc(100vh - 74px);
     background-color: $color-additional-background;
     padding: 10px;
     border-radius: $border-radius-10;
