--- a/src/screens/NewsScreen/newsScreen.module.scss
+++ b/src/screens/NewsScreen/newsScreen.module.scss
@@ -10,6 +10,8 @@
     grid-column: 1/2;
   }
   &_popular {
+    display: flex;
+    flex-direction: column;
     grid-column: 2/3;
     position: sticky;
     top: 74px;
@@ -33,6 +35,12 @@
   &:last-child {
     margin-bottom: 0;
   }
+}
+.popular_desktop {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 .title {
   margin-bottom: 10px;
@@ -73,6 +81,7 @@
   height: auto;
   object-fit: cover;
   border-radius: $border-radius-20;
+  max-height: 500px;
 }
 .markdownContent {
   margin: 50px 0;
