--- a/src/components/common/Cards/CardNews/cardNews.module.scss
+++ b/src/components/common/Cards/CardNews/cardNews.module.scss
@@ -6,11 +6,14 @@
   max-height: 320px;
   margin-bottom: 10px;
   transition: $transiton;
-  &:hover {
-    box-shadow: $box-shadow-default;
-  }
   &:last-child {
     margin-bottom: 0;
+  }
+  &:first-child {
+    margin-bottom: 10px;
+  }
+  &:hover {
+    box-shadow: $box-shadow-default;
   }
 
   &_inline {
@@ -18,9 +21,14 @@
     flex-direction: column;
   }
   & .image {
+    max-height: 320px;
+    position: relative;
+    display: flex;
+
     &_image {
       width: 100%;
       height: 100%;
+      max-height: 320px;
       object-fit: cover;
     }
   }
@@ -31,7 +39,6 @@
     gap: $gap-medium;
     background-color: $color-additional-background;
     padding: 20px;
-    
 
     &_title {
       // margin-bottom: 20px;
@@ -74,6 +81,7 @@
     transform: scale(1.01);
   }
   & .image {
+    max-height: 85px;
     &_image {
       width: 100%;
       height: 100%;
@@ -97,14 +105,18 @@
     }
   }
 }
-@include mediaPhone {
+@include mediaTablet {
   .card_popular {
+    display: flex;
+    flex-direction: column;
     height: auto;
-    &:hover {
-      box-shadow: none;
-      transform: none;
+    & .image {
+      max-height: none;
+      height: 200px;
     }
   }
+}
+@include mediaPhone {
   .card,
   .card_popular {
     display: flex;
@@ -115,11 +127,21 @@
     & .image {
       &_image {
         border-radius: $border-radius-20;
-        max-height: 100%;
+        // max-height: 100%;
       }
     }
     & .content {
       padding: 15px 5px;
+    }
+  }
+  .card_popular {
+    height: auto;
+    &:hover {
+      box-shadow: none;
+      transform: none;
+    }
+    & .image {
+      max-height: auto;
     }
   }
 }
