--- a/src/components/common/Cards/CardSliderLocation/cardSliderLocation.module.scss
+++ b/src/components/common/Cards/CardSliderLocation/cardSliderLocation.module.scss
@@ -1,17 +1,15 @@
 @import "/src/asset/common-styles/";
 .card {
   width: 100%;
-  grid-template-rows: 220px 1fr;
+  // grid-template-rows: 220px 1fr;
   gap: 16px;
   &_image {
-    height: 220px;
+    max-height: 220px;
     border-radius: 12px;
     overflow: hidden;
     position: relative;
     &_image {
-      // height: 320px;
-      // width: auto;
-      // min-width: 100%;
+      aspect-ratio: 16 / 9;
       width: 100%;
       height: 100%;
       object-fit: cover;
@@ -21,14 +19,12 @@
       display: grid;
       grid-template-columns: 1fr auto;
       gap: 10px;
-      //   background-color: red;
       position: absolute;
       top: 0;
       right: 0;
       padding: 16px;
       @extend %Text14;
       color: $color-main-white;
-
       &_text {
         background-color: $color-main-blue;
         padding: 7.5px 10px;
