--- a/src/components/common/Header/header.module.scss
+++ b/src/components/common/Header/header.module.scss
@@ -7,6 +7,7 @@
   & .container {
     @extend %display-between;
     gap: $gap;
+    margin-bottom: 10px;
   }
 }
 
@@ -28,20 +29,32 @@
     }
   }
 }
-.test {
-  color: black;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  &_title {
-    font-size: 20px;
+.header__second {
+  & ul {
+    display: flex;
+    overflow-x: auto;
+    white-space: nowrap;
+    gap: 10px;
+    padding-bottom: 5px;
   }
+
   &_link {
+    transition: $transiton;
     &:hover {
-      text-decoration: underline;
+      color: $color-main-gold;
     }
   }
 }
+// .test {
+//   color: black;
+//   display: flex;
+//   flex-wrap: wrap;
+//   gap: 10px;
+//   &_title {
+//     font-size: 20px;
+//   }
+
+// }
 @include mediaTablet {
   .nav_block {
     display: none;
