--- a/src/components/common/Popup/PopupMap/popupMap.module.scss
+++ b/src/components/common/Popup/PopupMap/popupMap.module.scss
@@ -18,6 +18,7 @@
 .image_ctn {
   display: flex;
   position: relative;
+  width: 100%;
   &_image {
     height: 100%;
     width: 100%;
@@ -57,6 +58,14 @@
     &_ctn {
       background-color: transparent;
       position: relative;
+    }
+  }
+}
+@include mediaPhone {
+  .button {
+    width: 100%;
+    &_ctn {
+      width: 100%;
     }
   }
 }
