--- a/src/asset/common-styles/variables.scss
+++ b/src/asset/common-styles/variables.scss
@@ -35,7 +35,7 @@ $social-twitter-color: #000000; // Twitter
 $social-viber-color: #7360f2; // Viber
 $social-vk-color: #4c75a3; // ВКонтакте
 $social-whatsapp-color: #25d366; // WhatsApp
-$social-instagram-color: #C13584; // instagram
+$social-instagram-color: #c13584; // instagram
 
 $gap: 8px;
 $gap-small: 8px;
@@ -55,3 +55,5 @@ $media-mini-phone: 350px;
 $transiton: all 0.3s;
 
 $box-shadow-default: 1px 1px 6px 2px $color-main-blue_hover;
+
+$header-height: 108px;
